[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Pictures/Evolution.png" type="Texture2D" id=1]
[ext_resource path="res://Graphics/Battlers/003.png" type="Texture2D" id=2]
[ext_resource path="res://Utilities/Evolution.gd" type="Script" id=3]
[ext_resource path="res://Audio/BGM/PU-evolve.ogg" type="AudioStream" id=4]
[ext_resource path="res://Graphics/Battlers/004.png" type="Texture2D" id=5]

[sub_resource type="Animation" id=1]
resource_name = "BG"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Evolve"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("StartSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 6.75, 7, 7.2, 7.45, 7.7, 7.95, 8.15, 8.4, 8.6, 8.85, 9.05, 9.3, 9.4, 9.5, 9.6, 9.7 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:effect_weight")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 10.5, 11.1 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EndSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 1, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 6.75, 7, 7.2, 7.45, 7.7, 7.95, 8.15, 8.4, 8.6, 8.85, 9.05, 9.3, 9.4, 9.5, 9.6, 9.7 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EndSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WhiteFade:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0, 9.7, 10.8 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("WhiteFade:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 9.7, 10, 10.5, 10.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShadeUp"
tracks/0/type = "value"
tracks/0/path = NodePath(".:effect_weight")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Evolution" type="Node2D"]
script = ExtResource( 3 )
effect_weight = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BG" type="Sprite2D" parent="."]
position = Vector2( -0.707092, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG"]
autoplay = "BG"
anims/BG = SubResource( 1 )

[node name="TopBar" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 64.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BottomBar" type="ColorRect" parent="."]
offset_top = 320.0
offset_right = 512.0
offset_bottom = 384.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartSprite" type="Sprite2D" parent="."]
position = Vector2( 256, 192 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 80
__meta__ = {
"_edit_lock_": true
}

[node name="EndSprite" type="Sprite2D" parent="."]
position = Vector2( 256, 192 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 192
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Evolve = SubResource( 2 )
anims/ShadeUp = SubResource( 3 )

[node name="WhiteFade" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
offset_right = 512.0
offset_bottom = 384.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
